@@ -5,5 +5,4 @@
 
 OPTS="-DskipTests=true -Dbasepom.check.skip-all=true -Dbasepom.check.skip-javadoc=false -Dbasepom.check.fail-javadoc=true -B"
 
-# required for kotlin doc builds
-MAVEN_OPTS=--illegal-access=permit mvn -q ${OPTS} clean verify
+mvn -q ${OPTS} -Ppublish-docs clean install
